Fixes .email-item height on Firefox

--- a/examples/email/css/email.css
+++ b/examples/email/css/email.css
@@ -150,6 +150,7 @@ a {
   border-bottom: 1px solid #ddd;
   border-left: 6px solid transparent;
   color: #333;
+  display: block;
 }
 
 .email-item:hover {
